# corsair-void-cli

./: Cargo.toml  README.md
src/: battery.rs  device.rs  main.rs
