[package]
name = "corsair-void-cli"
version = "0.1.0"
edition = "2024"
authors = ["loseardes77"]
description = "Cli app to manage Corsair Void headsets"
keywords = ["corsair", "void", "corsair-void", "cli", "tool"]
license = "BSD-2"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
sysfs = "0.0.2"
